<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_dark"
    android:orientation="vertical"
    android:padding="24dp">

    <!-- Icono -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/espada"
        android:textSize="48sp"
        android:layout_marginBottom="16dp" />

    <!-- Título -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_new_game"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/text_primary"
        android:gravity="center"
        android:layout_marginBottom="32dp" />

    <EditText
        android:id="@+id/et_buscar_usuario"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/bg_input"
        android:hint="@string/et_Buscar_Usuario"
        android:textColor="@color/text_primary"
        android:textColorHint="@color/text_secondary"
        android:inputType="text"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/btn_invitar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/bg_button_primary"
        android:text="@string/btn_Invitar"
        android:textColor="@color/text_primary"
        android:textSize="16sp"
        android:textStyle="bold" />

</LinearLayout>